# crack-cli

./: .gitignore  LICENSE  README.md
.github/workflows/: rust-ci.yml
rust/: README.md
rust/crates/rusty-claude-cli/: Cargo.toml
rust/crates/rusty-claude-cli/src/: main.rs
rust/crates/self-improve/: Cargo.toml
rust/crates/self-improve/src/: engine.rs  lib.rs  meta_agent.rs  sandbox.rs  scorer.rs  task_runner.rs  types.rs
src/: task.py
src/self_improve/: engine.py  meta_agent.py  sandbox.py  task_runner.py  types.py
