[package]
name = "self-improve"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
api       = { path = "../api" }
anyhow    = "1"
serde     = { version = "1", features = ["derive"] }
serde_json.workspace = true
tokio     = { version = "1", features = ["process", "fs", "rt-multi-thread", "macros", "sync", "time"] }
toml      = "0.8"
tracing   = "0.1"
csv       = "1"
which     = "6"

[dev-dependencies]
tempfile  = "3"
tokio     = { version = "1", features = ["rt", "macros"] }

[lints]
workspace = true
